<resources>
    <string name="app_name">SmileFun</string>
    <string name="game_des">
        \t This game product by where you can read the article on \'https://max.book118.com/html/2017/0725/124227804.shtm\'.\n
        \t Thanks for the efforts made by people of depression!\n
        \t Here is the game introduced, select the only one picture who is smile in many negative faces.Yeah, isn\'t it very simple?
        Believe me, you will be positive if keep it 10 min at least every day after 3 months.\n
        \t Now come on hurry up! Best wishes to you!\n
        \t Sincerely BobMu.
    </string>
    <string name="request_permission_install">安装权限申请</string>
    <string name="permission_fail_first">应用没有获得网络访问或存储授权，暂时无法检查更新，如需更新应用，请前往\"设置-应用程序-SmileFun\"授权该应用相关权限</string>
    <string name="check_update_fail_no_network">网络连接未打开，暂时无法检查更新</string>
    <string name="grant">授权</string>
    <string name="cancel">取消</string>
    <string name="update_check_last">当前软件版为最新，没有更新</string>
    <string name="update_check">SmileFun版本检查</string>
    <string name="update_check_network">检查更新需要连接网络，请选择一条线路</string>
    <string name="update_check_detail">有新版本需要联网更新</string>
    <string name="update_immediately_global">全球线路</string>
    <string name="update_immediately_local">国内线路</string>
    <string name="update_immediately">立即更新</string>
    <string name="update_later">稍后更新</string>
    <string name="update_downloading">正在下载更新中</string>
    <string name="download_cancel">下载已取消</string>
    <string name="cur_level_d">当前关卡：%d</string>
    <string name="exist">退出</string>
    <string name="next_level">下一关</string>
    <string name="title_success">恭喜您</string>
    <string name="retry">重新开始</string>
    <string name="title_fail">抱歉</string>
    <string name="exist_false">点错了</string>
    <string name="exist_success">确定</string>
    <string name="title_exist">确定现在就结束游戏吗？</string>
    <string name="game_time_d">用时：%d秒</string>
    <string name="faile_save_record">无法保存游戏记录，请联系开发人员</string>
    <string name="success_level_d">当前第%d关已通过</string>
    <string name="fail_level_d">您在第%d关已失误</string>
    <string name="msg_permission_install">请授权SmileFun应用的安装升级权限</string>
    <string name="main_des">游戏介绍</string>
    <string name="main_start">开始游戏</string>
    <string name="main_history">历史记录</string>
    <string name="main_setting">游戏设置</string>
    <string name="main_check">检查更新</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="setting_input_lines">设置起始行数</string>
    <string name="setting_input_columns">设置起始列数</string>
    <string name="setting_reset">重置</string>
    <string name="setting_confirm">确定</string>
    <string name="setting_difficulty_simple">简单</string>
    <string name="setting_difficult_hard">困难</string>
    <string name="setting_difficult_terrible">变态难</string>
    <string name="setting_difficulty">难度等级：</string>
</resources>
